<resources>
    <string name="app_name">Footer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="give_feedback">Please give us your feedback!</string>
    <string name="send">Send</string>

    <string name="nav_user">TAP TO SEE YOUR PROFILE</string>
    <string name="nav_login">TAP TO LOGIN</string>
    <string name="nav_guest">Guest</string>

    <string name="title_activity_login">Login</string>

    <!-- Strings related to login and register-->
    <string name="prompt_uname">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full">Full Name</string>
    <string name="prompt_nick">Nickname</string>
    <string name="prompt_email">E-Mail</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="action_register">Tap here to register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_uname">This field is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register">Register!</string>
    <string name="login_header">Login to get more features!</string>
    <string name="title_activity_resto">RestoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
